--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Chicle&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 20px;
+}
+body {
+  background: #fff;
+  height: 100vh;
+  font-family: 'Chicle', serif;
+  font-size: 40px;
+  /* overflow: hidden; */
+}
+
+.cat-card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .cat-img {
   width: 500px;
   height: auto;
+  object-fit: cover;
 }
 
 .is-hidden {
