--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,15 +24,9 @@ body {
   position: relative;
 }
 
-.loader {
-  position: absolute;
-  font-size: 60px;
-  color: white;
-  z-index: 12;
-}
 .breed-select {
   position: absolute;
-  top: 5%;
+  top: 12%;
   left: 1%;
   z-index: 10;
   height: 50px;
@@ -51,14 +45,14 @@ body {
 .show-dogs {
   position: absolute;
   top: 5%;
-  left: 18%;
+  left: 1%;
   z-index: 10;
   height: 50px;
-  width: 150px;
+  width: 250px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 20px;
-  padding: 10px;
+  padding: 5px;
   color: black;
   font-family: 'Kanit', sans-serif;
   font-weight: 700;
@@ -119,4 +113,202 @@ body {
 
 .is-hidden {
   visibility: hidden;
+}
+
+/* modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 500ms linear, visibility 500ms linear;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 600px;
+  min-height: 600px;
+  background-color: white;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: bisque;
+  display: flex;
+  flex-direction: column;
+}
+
+.img-cat-hypnosis {
+  object-fit: cover;
+  height: 380px;
+}
+
+.popup {
+  display: none;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+}
+
+.want-dogs-title {
+  font-size: 36px;
+  margin-bottom: 30px;
+  color: #e91e63;
+}
+
+.buttons {
+  margin: 20px;
+}
+
+.dogs-btn {
+  font-size: 20px;
+  padding: 12px 24px;
+  margin: 5px;
+  border: none;
+  border-radius: 20px;
+  background-color: #ff4081;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #ff5c8d; /* Lighter shade on hover for a soft effect */
+}
+
+.popup {
+  display: none;
+  background-color: #fff;
+  border: 1px solid #e91e63; /* Romantic color for the border */
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 11;
+  font-family: 'Dancing Script', cursive;
+  font-size: 24px;
+  color: #e91e63; /* Romantic color for the popup text */
+}
+
+/* Add a smooth fade-in animation for the popup */
+.popup.fade-in {
+  animation: fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* loader */
+
+.heading {
+  font-family: 'eight', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.large-text {
+  font-size: 5rem;
+}
+
+#hero {
+  background: #101010;
+  color: #fff;
+  padding: 2rem;
+}
+
+#hero::after {
+  content: '';
+  width: 100vw;
+  height: 5rem;
+  background: rgb(16, 20, 118);
+  background: linear-gradient(
+    2deg,
+    rgba(16, 20, 118, 1) 0%,
+    rgba(16, 20, 118, 1) 50%,
+    rgba(16, 16, 16, 1) 50%,
+    rgba(16, 16, 16, 1) 100%
+  );
+  display: block;
+  position: absolute;
+  left: 0;
+}
+
+#loading-animation {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background: #0000007c;
+  text-align: center;
+  padding-top: 40vh;
+  color: #fff;
+}
+
+#loading-animation p {
+  display: inline-block;
+  animation: bounce 1s infinite ease-in-out;
+}
+
+#loading-animation p:nth-of-type(2) {
+  animation-delay: 0.1s;
+}
+
+#loading-animation p:nth-of-type(3) {
+  animation-delay: 0.2s;
+}
+
+#loading-animation p:nth-of-type(4) {
+  animation-delay: 0.3s;
+}
+
+#loading-animation p:nth-of-type(5) {
+  animation-delay: 0.4s;
+}
+
+#loading-animation p:nth-of-type(6) {
+  animation-delay: 0.5s;
+}
+
+#loading-animation p:nth-of-type(7) {
+  animation-delay: 0.6s;
+}
+
+@keyframes bounce {
+  30% {
+    transform: translateY(-100px);
+  }
+  60% {
+    transform: none;
+  }
 }
