--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,6 +9,14 @@ p {
   padding: 0;
 }
 
+select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+select::-ms-expand {
+  display: none;
+}
+
 body {
   background-image: url(../images/bg.png);
   background-repeat: no-repeat;
@@ -26,7 +34,7 @@ body {
 
 .breed-select {
   position: absolute;
-  top: 12%;
+  top: 13%;
   left: 1%;
   z-index: 10;
   height: 50px;
@@ -40,6 +48,14 @@ body {
   font-weight: 700;
   cursor: pointer;
   transition: all 0.5s linear;
+}
+
+.icon {
+  position: absolute;
+  fill: red;
+  z-index: 15;
+  top: 10%;
+  left: 90%;
 }
 
 .show-dogs {
